[package]
name = "authentic_rtree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types", version = "0.1.0" }
once_cell = "1.9.0"
threadpool = "1.8.1"

[dev-dependencies]
chrono = "0.4.19"
rand = "0.8.5"
hex = "0.4.3"