[package]
name = "cluster-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
MerkleRTree = { path = "../MerkleRTree", version = "0.1.0" }
chrono = "0.4.19"
types = { path = "../types", version = "0.1.0" }
structopt = "0.3"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "continuous_insert"
harness = false