[package]
name = "cluster-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
authentic_rtree = { path = "../authentic_rtree", version = "0.1.0" }
chrono = "0.4.19"
types = { path = "../types", version = "0.1.0" }
structopt = "0.3"
rand = "0.8.5"
bench_pref = { path = "../bench_pref", version = "0.1.0" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "pref_bench"
harness = false

[[bench]]
name = "bench_real"
harness = false

[[bench]]
name = "sort"
harness = false

[[bench]]
name = "batch"
harness = false