[package]
name = "feature-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
authentic_rtree = { path = "../authentic_rtree", version = "0.1.0" }
chrono = "0.4.19"
types = { path = "../types", version = "0.1.0" }
rand = "0.8.5"
hex = "0.4.3"
rustyline = "10.0.0"
serde_json = "1.0.61"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"