[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
authentic_rtree = { path = "../authentic_rtree", version = "0.1.0" }
types = {path = "../types", version = "0.1.0" }
rand = "0.8.5"
once_cell = "1.9.0"
structopt = "0.3"