[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
chrono = "0.4.19"
hex = "0.4.3"
once_cell = "1.9.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }