[package]
name = "visual"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"
authentic_rtree = { path = "../authentic_rtree", version = "0.1.0" }
rand = "0.8.5"
types = { path = "../types", version = "0.1.0" }